[package]
name = "contact-csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crabler = "0.1.28"
csv = "1.2.0"
serde = { version = "1.0.152", features = ["derive"] }
surf = "2.3.2"
tokio = { version = "1.25.0", features = ["full"] }
